@@ -19,6 +19,7 @@ struct async_operation_ref;
 void
 fcgi_request(pool_t pool, struct fcgi_stock *fcgi_stock,
              struct hstock *tcp_stock,
+             const char *action,
              const char *path,
              http_method_t method, const char *uri,
              const char *script_name, const char *path_info,
